--- a/education.html
+++ b/education.html
@@ -43,20 +43,8 @@
         <li>
           <a href="./project.html">Project</a>
         </li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="download">Interest<span class="caret"></span></a>
-          <ul class="dropdown-menu" aria-labelledby="download">
-            <li><a href="http://jsfiddle.net/bootswatch/9n4nxnqy/">Open Sandbox</a></li>
-            <li class="divider"></li>
-            <li><a href="./bootstrap.min.css">bootstrap.min.css</a></li>
-            <li><a href="./bootstrap.css">bootstrap.css</a></li>
-            <li class="divider"></li>
-            <li><a href="./variables.less">variables.less</a></li>
-            <li><a href="./bootswatch.less">bootswatch.less</a></li>
-            <li class="divider"></li>
-            <li><a href="./_variables.scss">_variables.scss</a></li>
-            <li><a href="./_bootswatch.scss">_bootswatch.scss</a></li>
-          </ul>
+        <li>
+          <a href="./interest.html">Interest</a>
         </li>
         <li>
           <a href="./contact.html">Contact Me</a>
@@ -76,14 +64,16 @@
 <br>
 <br>
 <br>
-<h3>Education</h3>
+<h3 class="head-title">Education</h3>
 <br>
 <div class="panel panel-success">
   <div class="panel-heading">
     <h3 class="panel-title">Harvard University</h3>
   </div>
   <div class="panel-body">
-    <p>Course Work: Data Science, Machine Learning, Parallel Computing</p>
+    <p><b>Degree:</b> S.M. in Computational Science</p>
+    <p><b>Course Work:</b> Data Science, Machine Learning, Parallel Computing</p>
+    <p><b>GPA:</b> 3.83/4.0</p>
   </div>
 </div>
 
@@ -92,7 +82,9 @@
     <h3 class="panel-title">Sun Yat-sen University</h3>
   </div>
   <div class="panel-body">
-    <p>Course Work: Data Structure and Algorithm, Statistical Inference</p>
+    <p><b>Degree:</b> B.S. in Computational Science</p>
+    <p><b>Course Work:</b> Data Structure and Algorithm, Statistical Inference</p>
+    <p><b>GPA:</b> 3.7/4.0</p>
   </div>
 </div>
 
