--- a/project.html
+++ b/project.html
@@ -43,20 +43,8 @@
         <li>
           <a href="./project.html">Project</a>
         </li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="download">Interest<span class="caret"></span></a>
-          <ul class="dropdown-menu" aria-labelledby="download">
-            <li><a href="http://jsfiddle.net/bootswatch/9n4nxnqy/">Open Sandbox</a></li>
-            <li class="divider"></li>
-            <li><a href="./bootstrap.min.css">bootstrap.min.css</a></li>
-            <li><a href="./bootstrap.css">bootstrap.css</a></li>
-            <li class="divider"></li>
-            <li><a href="./variables.less">variables.less</a></li>
-            <li><a href="./bootswatch.less">bootswatch.less</a></li>
-            <li class="divider"></li>
-            <li><a href="./_variables.scss">_variables.scss</a></li>
-            <li><a href="./_bootswatch.scss">_bootswatch.scss</a></li>
-          </ul>
+        <li>
+          <a href="./interest.html">Interest</a>
         </li>
         <li>
           <a href="./contact.html">Contact Me</a>
@@ -76,22 +64,37 @@
 <br>
 <br>
 <br>
+<h3 class="head-title">Project Experience</h3>
 <br>
 <div class="panel panel-success">
   <div class="panel-heading">
-    <h3 class="panel-title">Harvard University</h3>
+    <h3 class="panel-title">Automated System of Hotel Reviews Opinion Mining and Sentiment Analysis</h3>
   </div>
   <div class="panel-body">
-    Panel content
+    <p><b>Website:</b> <a href="http://tobytoyuito.github.io/TextMining/" target="_blank">click here</a></p>
+    <p><b>Pdf:</b> <a href="./AC297r_SmarterTravel_Poster.pdf" target="_blank">Download</a></p>
   </div>
 </div>
 
 <div class="panel panel-success">
   <div class="panel-heading">
-    <h3 class="panel-title">Sun Yat-sen University</h3>
+    <h3 class="panel-title">Prediction of H1B Visa Application</h3>
   </div>
   <div class="panel-body">
-    Panel content
+    <p><b>Website:</b> <a href="http://h1b-prediction.weebly.com" target="_blank">click here</a></p>
+    <p><b>Videos:</b></p>
+    <iframe class="video" src="//www.youtube.com/embed/0Y-so6Tbc2E?wmode=opaque" frameborder="0" allowfullscreen=""></iframe>
+  </div>
+</div>
+
+<div class="panel panel-success">
+  <div class="panel-heading">
+    <h3 class="panel-title">Simulation of Physical Model</h3>
+  </div>
+  <div class="panel-body">
+    <p><b>Videos:</b></p>
+    <iframe width="420" height="315" src="https://www.youtube.com/embed/_dsMQ4GOIDY" frameborder="0" allowfullscreen></iframe>
+    <iframe width="420" height="315" src="https://www.youtube.com/embed/SHU91YLiJ3E" frameborder="0" allowfullscreen></iframe>
   </div>
 </div>
 
