--- a/work.html
+++ b/work.html
@@ -43,20 +43,8 @@
         <li>
           <a href="./project.html">Project</a>
         </li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="download">Interest<span class="caret"></span></a>
-          <ul class="dropdown-menu" aria-labelledby="download">
-            <li><a href="http://jsfiddle.net/bootswatch/9n4nxnqy/">Open Sandbox</a></li>
-            <li class="divider"></li>
-            <li><a href="./bootstrap.min.css">bootstrap.min.css</a></li>
-            <li><a href="./bootstrap.css">bootstrap.css</a></li>
-            <li class="divider"></li>
-            <li><a href="./variables.less">variables.less</a></li>
-            <li><a href="./bootswatch.less">bootswatch.less</a></li>
-            <li class="divider"></li>
-            <li><a href="./_variables.scss">_variables.scss</a></li>
-            <li><a href="./_bootswatch.scss">_bootswatch.scss</a></li>
-          </ul>
+        <li>
+          <a href="./interest.html">Interest</a>
         </li>
         <li>
           <a href="./contact.html">Contact Me</a>
@@ -76,22 +64,30 @@
 <br>
 <br>
 <br>
+<h3 class="head-title">Work Experience</h3>
 <br>
 <div class="panel panel-success">
   <div class="panel-heading">
-    <h3 class="panel-title">Harvard University</h3>
+    <h3 class="panel-title">Termscout</h3>
   </div>
   <div class="panel-body">
-    Panel content
+    Automated process of finding potential sales leads with natural language processing and machine learning.
+ Built machine learning predictive model to qualify candidates by using Support Vector Machine and Naive Bayes with accuracy of 85% to speed up finding procedure by 100%. And built hierarchical clustering model to find
+duplicate sales leads in SQL database with more than 95% accuracy.
+ Incorporated all machine learning models into Ruby on Rails app.
+ Used Amazon Elastic MapReduce to find business addresses on Common Crawl to identify companies in buildings.
   </div>
 </div>
 
 <div class="panel panel-success">
   <div class="panel-heading">
-    <h3 class="panel-title">Sun Yat-sen University</h3>
+    <h3 class="panel-title">Nielsen Company</h3>
   </div>
   <div class="panel-body">
-    Panel content
+    Analyzed Fast-Moving Consumer Goods retailers’ data, such as Price Index, Market Share, to summarize performance of retailer compared to market on 56 categories and suggest better sales strategy.
+ Collected and analyzed marketing data on on-line Fast-moving Consumer Goods retailers and sorted out monthly statistics for reference.
+ Generated report for 2 retailers to interpret the performance of 80 categories every month with Nielsen Answers.
+ Analyzed key vendor in 20 categories in moving annual total or year to date.
   </div>
 </div>
 
