--- a/index.html
+++ b/index.html
@@ -43,20 +43,8 @@
         <li>
           <a href="./project.html">Project</a>
         </li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="download">Interest<span class="caret"></span></a>
-          <ul class="dropdown-menu" aria-labelledby="download">
-            <li><a href="http://jsfiddle.net/bootswatch/9n4nxnqy/">Open Sandbox</a></li>
-            <li class="divider"></li>
-            <li><a href="./bootstrap.min.css">bootstrap.min.css</a></li>
-            <li><a href="./bootstrap.css">bootstrap.css</a></li>
-            <li class="divider"></li>
-            <li><a href="./variables.less">variables.less</a></li>
-            <li><a href="./bootswatch.less">bootswatch.less</a></li>
-            <li class="divider"></li>
-            <li><a href="./_variables.scss">_variables.scss</a></li>
-            <li><a href="./_bootswatch.scss">_bootswatch.scss</a></li>
-          </ul>
+        <li>
+          <a href="./interest.html">Interest</a>
         </li>
         <li>
           <a href="./contact.html">Contact Me</a>
@@ -77,22 +65,10 @@
 <br>
 <br>
 <br>
-<div class="panel panel-success">
-  <div class="panel-heading">
-    <h3 class="panel-title">Harvard University</h3>
-  </div>
-  <div class="panel-body">
-    Panel content
-  </div>
-</div>
-
-<div class="panel panel-success">
-  <div class="panel-heading">
-    <h3 class="panel-title">Sun Yat-sen University</h3>
-  </div>
-  <div class="panel-body">
-    Panel content
-  </div>
+<div class="content">
+<img class="bio-img" src="bio.png">
+<h3>Bio</h3>
+<p>Hi, I am Toby Du. I will be graduating with master's degree in computer science from Harvard in December this year. Last summer, I did an internship in Termscout in Denver as a software engineer and data scientist. I found that I am very interested in this field and I would really like to expand my experience in this field. I am looking for full time job as software engineer or data scientist starting from spring.</p>
 </div>
 
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
