--- a/interest.html
+++ b/interest.html
@@ -43,20 +43,8 @@
         <li>
           <a href="./project.html">Project</a>
         </li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="download">Interest<span class="caret"></span></a>
-          <ul class="dropdown-menu" aria-labelledby="download">
-            <li><a href="http://jsfiddle.net/bootswatch/9n4nxnqy/">Open Sandbox</a></li>
-            <li class="divider"></li>
-            <li><a href="./bootstrap.min.css">bootstrap.min.css</a></li>
-            <li><a href="./bootstrap.css">bootstrap.css</a></li>
-            <li class="divider"></li>
-            <li><a href="./variables.less">variables.less</a></li>
-            <li><a href="./bootswatch.less">bootswatch.less</a></li>
-            <li class="divider"></li>
-            <li><a href="./_variables.scss">_variables.scss</a></li>
-            <li><a href="./_bootswatch.scss">_bootswatch.scss</a></li>
-          </ul>
+        <li>
+          <a href="./interest.html">Interest</a>
         </li>
         <li>
           <a href="./contact.html">Contact Me</a>
@@ -79,19 +67,10 @@
 <br>
 <div class="panel panel-success">
   <div class="panel-heading">
-    <h3 class="panel-title">Harvard University</h3>
+    <h3 class="panel-title">Rubik's Cube</h3>
   </div>
   <div class="panel-body">
-    Panel content
-  </div>
-</div>
-
-<div class="panel panel-success">
-  <div class="panel-heading">
-    <h3 class="panel-title">Sun Yat-sen University</h3>
-  </div>
-  <div class="panel-body">
-    Panel content
+    <p>https://www.worldcubeassociation.org/results/p.php?i=2008DURU01</p>
   </div>
 </div>
 
