change interest and work

--- a/interest.html
+++ b/interest.html
@@ -70,7 +70,8 @@
     <h3 class="panel-title">Rubik's Cube</h3>
   </div>
   <div class="panel-body">
-    <p>https://www.worldcubeassociation.org/results/p.php?i=2008DURU01</p>
+    <p><b>Record:</b> <a href="https://www.worldcubeassociation.org/results/p.php?i=2008DURU01" target="_blank">World Cube Association</a></p>
+    <iframe width="420" height="315" src="https://www.youtube.com/embed/Bw9-vFvwsok" frameborder="0" allowfullscreen></iframe>
   </div>
 </div>
 
