--- a/work.html
+++ b/work.html
@@ -71,11 +71,10 @@
     <h3 class="panel-title">Termscout</h3>
   </div>
   <div class="panel-body">
-    Automated process of finding potential sales leads with natural language processing and machine learning.
- Built machine learning predictive model to qualify candidates by using Support Vector Machine and Naive Bayes with accuracy of 85% to speed up finding procedure by 100%. And built hierarchical clustering model to find
-duplicate sales leads in SQL database with more than 95% accuracy.
- Incorporated all machine learning models into Ruby on Rails app.
- Used Amazon Elastic MapReduce to find business addresses on Common Crawl to identify companies in buildings.
+    <p>Automated process of finding potential sales leads with natural language processing and machine learning.</p>
+    <p>Built machine learning predictive model to qualify candidates by using Support Vector Machine and Naive Bayes with accuracy of 85% to speed up finding procedure by 100%. And built hierarchical clustering model to find duplicate sales leads in SQL database with more than 95% accuracy.
+    <p>Incorporated all machine learning models into Ruby on Rails app.
+    <p>Used Amazon Elastic MapReduce to find business addresses on Common Crawl to identify companies in buildings.
   </div>
 </div>
 
@@ -84,10 +83,10 @@ duplicate sales leads in SQL database with more than 95% accuracy.
     <h3 class="panel-title">Nielsen Company</h3>
   </div>
   <div class="panel-body">
-    Analyzed Fast-Moving Consumer Goods retailers’ data, such as Price Index, Market Share, to summarize performance of retailer compared to market on 56 categories and suggest better sales strategy.
- Collected and analyzed marketing data on on-line Fast-moving Consumer Goods retailers and sorted out monthly statistics for reference.
- Generated report for 2 retailers to interpret the performance of 80 categories every month with Nielsen Answers.
- Analyzed key vendor in 20 categories in moving annual total or year to date.
+    <p>Analyzed Fast-Moving Consumer Goods retailers’ data, such as Price Index, Market Share, to summarize performance of retailer compared to market on 56 categories and suggest better sales strategy.</p>
+    <p>Collected and analyzed marketing data on on-line Fast-moving Consumer Goods retailers and sorted out monthly statistics for reference.</p>
+    <p>Generated report for 2 retailers to interpret the performance of 80 categories every month with Nielsen Answers.</p>
+    <p>Analyzed key vendor in 20 categories in moving annual total or year to date.</p>
   </div>
 </div>
 
