change to ruitao(toby)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Toby Du Website</title>
+  <title>Ruitao(Toby) Du Website</title>
 
   <!-- Bootstrap core CSS -->
   <link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -68,7 +68,7 @@
 <div class="content">
 <img class="bio-img" src="bio.png">
 <h3>Bio</h3>
-<p>Hi, I am Toby Du. I will be graduating with master's degree in computer science from Harvard in December this year. Last summer, I did an internship in Termscout in Denver as a software engineer and data scientist. I found that I am very interested in this field and I would really like to expand my experience in this field. I am looking for full time job as software engineer or data scientist starting from spring.</p>
+<p>Hi, I am Ruitao (Toby) Du. I will be graduating with master's degree in computer science from Harvard in December this year. Last summer, I did an internship in Termscout in Denver as a software engineer and data scientist. I found that I am very interested in this field and I would really like to expand my experience in this field. I am looking for full time job as software engineer or data scientist starting from spring.</p>
 </div>
 
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
