add swingy monkey and MRI projects

--- a/project.html
+++ b/project.html
@@ -31,6 +31,11 @@
   <div class="container">
     <div class="navbar-header">
       <a href="../" class="navbar-brand">Toby Du</a>
+      <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar-main" aria-expanded="false">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
     </div>
     <div class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
@@ -92,9 +97,33 @@
     <h3 class="panel-title">Simulation of Physical Model</h3>
   </div>
   <div class="panel-body">
+    <p><b>Code:</b> <a href="https://github.com/tobytoyuito/CS207" target="_blank">click here</a></p>
     <p><b>Videos:</b></p>
     <iframe width="420" height="315" src="https://www.youtube.com/embed/_dsMQ4GOIDY" frameborder="0" allowfullscreen></iframe>
     <iframe width="420" height="315" src="https://www.youtube.com/embed/SHU91YLiJ3E" frameborder="0" allowfullscreen></iframe>
+  </div>
+</div>
+
+<div class="panel panel-success">
+  <div class="panel-heading">
+    <h3 class="panel-title">Reinforcement Learning for Swingy Monkey</h3>
+  </div>
+  <div class="panel-body">
+    <p><b>Code:</b> <a href="https://github.com/tobytoyuito/CS181/tree/master/practical%204" target="_blank">click here</a></p>
+    <p><b>Videos:</b></p>
+    <iframe width="420" height="315" src="https://www.youtube.com/embed/n2C_SpC5T4A" frameborder="0" allowfullscreen></iframe>
+  </div>
+</div>
+
+<div class="panel panel-success">
+  <div class="panel-heading">
+    <h3 class="panel-title">3D Volume Registration with Gaussian Process</h3>
+  </div>
+  <div class="panel-body">
+    <p><b>Code:</b> <a href="https://github.com/tobytoyuito/AM207/blob/master/final_project/YC_Yingzhuo_Zhang_RD_DC_Report/YC_Yingzhuo_Zhang_RD_DC_AM207_Final_Project.ipynb" target="_blank">click here</a></p>
+    <p><b>Pdf:</b> <a href="./MRI.pdf" target="_blank">Download</a></p>
+    <p><b>Videos:</b></p>
+    <iframe width="420" height="315" src="https://www.youtube.com/embed/zzHpDNv0TBM" frameborder="0" allowfullscreen></iframe>
   </div>
 </div>
 
