--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
   <div class="container">
     <div class="navbar-header">
       <a href="../" class="navbar-brand">Ruitao(Toby) Du</a>
+      <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar-main" aria-expanded="false">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
     </div>
-    <div class="navbar-collapse collapse" id="navbar-main">
+    <div class="navbar-collapse collapse" id="navbar-main" aria-expanded="false" style="height: 1px;">
+    <!--<div class="navbar-collapse collapse" id="navbar-main">-->
       <ul class="nav navbar-nav">
         <li>
           <a href="./education.html">Education</a>
@@ -55,10 +61,10 @@
         <li><a href="http://github.com/tobytoyuito/" target="_blank">Github</a></li>
         <li><a href="https://www.linkedin.com/in/ruitaodu/" target="_blank">Linkedin</a></li>
       </ul>
-
     </div>
   </div>
 </div>
+
 
 <!-- Content -->
 <br>
