--- a/work.html
+++ b/work.html
@@ -31,6 +31,11 @@
   <div class="container">
     <div class="navbar-header">
       <a href="../" class="navbar-brand">Toby Du</a>
+      <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar-main" aria-expanded="false">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
     </div>
     <div class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
