--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <br>
 <br>
 <div class="content">
-<img class="bio-img" src="bio.png">
+<img class="bio-img" src="bio.jpg">
 <h3>Bio</h3>
 <p>Hi, I am Ruitao (Toby) Du. I will be graduating with master's degree in computer science from Harvard in December this year. Last summer, I did an internship in Termscout in Denver as a software engineer and data scientist. I found that I am very interested in this field and I would really like to expand my experience in this field. I am looking for full time job as software engineer or data scientist starting from spring.</p>
 </div>
