--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div class="content">
 <img class="bio-img" src="bio.jpg">
 <h3>Bio</h3>
-<p>Hi, I am Ruitao (Toby) Du. I will be graduating with master's degree in computer science from Harvard in December this year. Last summer, I did an internship in Termscout in Denver as a software engineer and data scientist. I found that I am very interested in this field and I would really like to expand my experience in this field. I am looking for full time job as software engineer or data scientist starting from spring.</p>
+<p>Hi, I am Ruitao (Toby) Du. I graduated from Harvard University with master degree in machine learning related field. I have solid machine learning skills and have great passion in AI</p>
 </div>
 
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
