update work exp

--- a/work.html
+++ b/work.html
@@ -73,6 +73,18 @@
 <br>
 <div class="panel panel-success">
   <div class="panel-heading">
+    <h3 class="panel-title">Microsoft</h3>
+  </div>
+  <div class="panel-body">
+    <p>Worked in Bing Engineering Experience team to improve experience of packaging system.</p>
+    <p>Built tools to help replacing Pacman Packaging system with open source system Nuget, help migrating codes from one source code management system (SD) to Git.</p>
+    <p>Built website with Node.JS for package ownership establishment and hosted server on Azure. 70% packages confirmed ownership through this website.</p>
+    <p>Performed Markov Cluster Algorithm to cluster packages dependency tree and assigned repositories to clusters.</p>
+  </div>
+</div>
+
+<div class="panel panel-success">
+  <div class="panel-heading">
     <h3 class="panel-title">Termscout</h3>
   </div>
   <div class="panel-body">
