--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 <br>
 <div class="content">
 <h3>Contact Information</h3>
-<p><b>E-mail: </b>tobytoyuito at g.harvard.edu</p>
+<p><b>E-mail: </b>tobytoyuito at gmail.com</p>
 </div>
 
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
